add new content tech/starship.md

--- a/layouts/shortcodes/swatches.html
+++ b/layouts/shortcodes/swatches.html
@@ -11,4 +11,16 @@
     class="w-full py-6 mr-3 rounded-md"
     {{ with .Get 2 }}style="background-color: {{ . }}"{{ end }}
   ></span>
+  <span
+    class="w-full py-6 mr-3 rounded-md"
+    {{ with .Get 3 }}style="background-color: {{ . }}"{{ end }}
+  ></span>
+  <span
+    class="w-full py-6 mr-3 rounded-md"
+    {{ with .Get 4 }}style="background-color: {{ . }}"{{ end }}
+  ></span>
+  <span
+    class="w-full py-6 mr-3 rounded-md"
+    {{ with .Get 5 }}style="background-color: {{ . }}"{{ end }}
+  ></span>
 </div>
